k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reduce-my-url-ingress
  namespace: reduce-my-url
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 4000
          - path: /r
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
